<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_coner_lay">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_notice_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:layout_margin="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:id="@+id/tv_dialog_refuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refused"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#ff2e5d"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/confirm"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

</LinearLayout>