<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:id="@+id/rel_op_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp">
            <ImageView
                android:id="@+id/iv_cusbtn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/nav_backarrow"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_optdes_contniue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_contniue"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_optdes_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/nav_backarrow"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_cus_btn"
            android:textSize="@dimen/txt_title_size"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_cusbtn_back"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/opt_des_how_to_use"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/opt_app"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/main_dialog_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>