<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:id="@+id/tv_splash_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/confirm"
                android:textSize="18sp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"

                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_notice_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/warn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            />
    </LinearLayout>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@mipmap/icon_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>