<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:id="@+id/rel_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp">
            <ImageView
                android:id="@+id/iv_cusbtn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/nav_backarrow"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_setting"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_back"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_equipment"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_setting_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/set_equipment_scan"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_security"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
     <LinearLayout
         android:id="@+id/linear_setting_modifyshoushi"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
         <TextView
             android:id="@+id/tv_shoushi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="@string/set_open_fingerpass"
             android:textColor="@color/white"
             />

     </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_setting_closeshoushi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/set_close_fingerpass"
                android:textColor="@color/white"
                />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_setting_finger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_openfinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="开启指纹解锁"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_common"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rel_set_cusbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/set_cus_btn"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:layout_marginLeft="15dp"/>
    <RelativeLayout
        android:id="@+id/rel_set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_setting_yuyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/set_language"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:layout_marginLeft="15dp"/>


</LinearLayout>