<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:id="@+id/rel_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp">
            <ImageView
                android:id="@+id/iv_cusbtn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/nav_backarrow"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_equipment_scan"
            android:textSize="@dimen/txt_title_size"
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_scan_back"

            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_scan_startscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_equipment_start"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textSize="@dimen/txt_right_size"
            android:textColor="@color/white"/>

    </RelativeLayout>

     <ListView
        android:id="@+id/list_bluetoothlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:dividerHeight="1px"
         android:divider="@color/white"
         android:layout_marginLeft="15dp"
         >
    </ListView>
    <TextView
        android:id="@+id/tv_not_support"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/scan_blue_no"/>
</LinearLayout>